--- a/styles.css
+++ b/styles.css
@@ -57,10 +57,15 @@
   height: 62px;
   margin-left: -6px;
 }
+@media screen and (max-width: 992px) {
+  .logo__header {
+    height: 47px;
+  }
+}
 
 @media screen and (max-width: 480px) {
   .logo__header {
-    gap: 11px;
+    gap: 7px;
   }
 }
 .logo__text {
@@ -305,8 +310,8 @@
     padding: 20px 0 20px 24px;
   }
   .logo__img {
-    width: 48px;
-    height: 46px;
+    width: 60px;
+    height: 60px;
   }
 }
 .headline {
