--- a/styles/header.scss
+++ b/styles/header.scss
@@ -316,7 +316,7 @@
   }
   .fa-bars,
   .fa-times {
-    padding: 20px 0 20px 24px;
+    padding: 20px 0 20px 20px; //!!!!!!!!!!!!!!!
   }
   .logo__img {
     width: 60px;
