--- a/styles/header.scss
+++ b/styles/header.scss
@@ -47,8 +47,8 @@
   gap: 9px;
 }
 .logo__img-header {
-  width: 72px; //!!!!!!!!!!!
-  height: 71px;
+  width: 60px;
+  height: 60px;
   margin-top: 7px;
 }
 .logo__header {
@@ -61,7 +61,7 @@
 
 @media screen and (max-width: $media-480) {
   .logo__header {
-    gap: 7px; //!!!!!!!!!!!
+    gap: 7px;
   }
 }
 
@@ -235,7 +235,7 @@
   .fa-times {
     font-size: clamp(22px, 1.1898rem + 0.9259vw, 32px);
     color: rgba($color-grey, 0.6);
-    margin-left: -2px; //!!!!!!!!!!!
+    margin-left: -2px;
   }
 }
 
@@ -310,22 +310,15 @@
 @media screen and (max-width: $media-992) {
   .header__inner {
     width: 100%;
-    // height: 64px; //!!!!!!!!!!!!!!!!!
     background-color: $color-light;
-    padding: 8px 20px 8px 15px; //!!!!!!!!!!!!!!!!
+    padding: 8px 20px 8px 15px;
   }
   .fa-bars,
   .fa-times {
-    padding: 20px 0 20px 20px; //!!!!!!!!!!!!!!!
+    padding: 20px 0 20px 20px;
   }
   .logo__img {
     width: 60px;
-    height: 60px; //!!!!!!!!!!!!!!!!!!!!
-  }
-}
-
-@media screen and (max-width: $media-480) {
-  .header__inner {
-    // margin: 10px 20px 10px 15px; //!!!!!!!!!!!!!!!
+    height: 60px;
   }
 }
