--- a/styles/index.scss
+++ b/styles/index.scss
@@ -53,6 +53,10 @@ body {
   flex-grow: 1;
 }
 
+.top-wrap {
+  background-color: $color-beige;
+}
+
 .button-blue,
 .button-white {
   font-size: 18px;
