--- a/styles.css
+++ b/styles.css
@@ -51,18 +51,18 @@
   margin-top: 7px;
 }
 
-.logo__header {
+.header-logo {
   height: 62px;
   margin-left: -6px;
 }
 @media screen and (max-width: 992px) {
-  .logo__header {
+  .header-logo {
     height: 47px;
   }
 }
 
 @media screen and (max-width: 480px) {
-  .logo__header {
+  .header-logo {
     gap: 10px;
   }
 }
@@ -288,9 +288,6 @@
 }
 
 @media screen and (max-width: 1200px) {
-  .button-blue--mobile {
-    display: none;
-  }
   .logo,
   .mobile-menu-icon {
     position: relative;
@@ -410,7 +407,7 @@
     gap: 15px;
   }
 }
-.headline__buttons .button-white--color {
+.headline__buttons .button-white--accent {
   color: #3040c4;
 }
 .headline__img {
@@ -420,30 +417,24 @@
   width: 796px;
   height: 448px;
 }
-@media screen and (max-width: 885px) {
-  .headline__img {
-    position: static;
-  }
-}
 @media screen and (max-width: 1200px) {
-  .headline__image {
+  .headline__img {
     opacity: 0.5;
   }
 }
 @media screen and (max-width: 885px) {
-  .headline__image {
-    position: relative;
-    width: 100%;
-    padding-bottom: 56.2814070352%;
-    opacity: 1;
+  .headline__img {
+    display: none;
+    position: static;
   }
-  .headline__image img {
-    position: absolute;
-    top: 0;
-    left: 0;
+}
+@media screen and (max-width: 480px) {
+  .headline__img {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    max-width: 480px;
+    height: auto;
+    display: block;
+    opacity: 1;
   }
 }
 
@@ -475,62 +466,62 @@
 
 .partners {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   background-color: #fff;
-  padding: 30px 130px 106px;
+  padding-bottom: 34px;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 1440px) {
   .partners {
-    padding: 30px 130px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 1140px;
+    margin: auto;
+    padding: 22px 0 97px;
   }
 }
-@media screen and (max-width: 885px) {
-  .partners {
-    padding: 20px 15px 46px 15px;
+.partners__row {
+  display: flex;
+}
+@media screen and (min-width: 1440px) {
+  .partners__row {
+    flex: 1;
+    justify-content: space-around;
   }
 }
-@media (max-width: 576px) {
-  .partners {
-    padding: 0 0 46px 0;
-  }
-}
-.partners__list {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  width: 100%;
-  max-width: 1400px;
-}
-@media (max-width: 576px) {
-  .partners__list {
-    grid-template-columns: repeat(3, minmax(107px, 1fr));
-    gap: 0;
-  }
-}
-.partners__list-item {
+.partners__item {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
   height: 94px;
+  width: 100%;
 }
-@media (max-width: 576px) {
-  .partners__list-item {
-    border-bottom: 1px solid rgba(43, 41, 45, 0.1);
-    border-right: 1px solid rgba(43, 41, 45, 0.1);
+@media screen and (max-width: 768px) {
+  .partners__item {
+    border-bottom: 1px solid #e3e3e3;
+    border-right: 1px solid #e3e3e3;
   }
 }
-.partners__list-item-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.partners__item:last-child {
+  border-right: none;
 }
-.partners__list-item:nth-child(3), .partners__list-item:nth-child(6) {
-  border-right: 0;
+@media screen and (min-width: 1440px) {
+  .partners__item {
+    border: none;
+  }
 }
-.partners__list-item-logo {
+.partners__link {
+  max-width: 80%;
+}
+.partners__logo {
   filter: brightness(0);
-  max-width: 100%;
-  height: auto;
+  margin: 0 auto;
+}
+@media screen and (max-width: 325px) {
+  .partners__logo--size {
+    max-width: 78%;
+  }
 }
 
 .features {
@@ -1913,7 +1904,6 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 1.5;
-  background-color: #f2f2f2;
   color: #2b292d;
 }
 
@@ -1952,6 +1942,11 @@ body {
 .button-blue {
   background-color: #3040c4;
   color: #fff;
+}
+@media screen and (max-width: 1200px) {
+  .button-blue {
+    display: none;
+  }
 }
 
 .button-white {
