--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -13,6 +13,7 @@ $color-grey: #2c3241;
 $color-body: #f2f2f2;
 $color-gray: #d5d4d5;
 $color-dark: #000000;
+$color-border: #e3e3e3;
 
 @mixin title {
   font-size: 56px;
