--- a/styles/engage.scss
+++ b/styles/engage.scss
@@ -19,7 +19,7 @@
     }
   }
 
-  &__content:nth-of-type(1) {
+  &__content:not(:last-child) {
     width: 100%;
     border-bottom: 1px solid rgba($color-black, 0.1);
   }
@@ -76,3 +76,12 @@
     margin-top: 19px;
   }
 }
+
+
+// .features__content-subtitle--mobile {
+//   display: none;
+
+//   @media screen and (max-width: $media-855) {
+//     display: block;
+//   }
+// }
