--- a/styles/header.scss
+++ b/styles/header.scss
@@ -38,6 +38,10 @@
     display: flex;
     align-items: center;
     gap: 58px;
+
+    @media screen and (max-width: $media-1200) {
+      display: none;
+    }
   }
 }
 
@@ -202,7 +206,7 @@
 
 .header__audio {
   position: absolute;
-  top: 12px;
+  top: 6px;
   right: -85px;
 
   @media screen and (max-width: $media-1200) {
