--- a/styles.css
+++ b/styles.css
@@ -342,7 +342,6 @@
 @media screen and (max-width: 480px) {
   .headline {
     margin: 0;
-    padding-top: 32px;
     height: 800px;
   }
 }
@@ -364,6 +363,7 @@
 @media screen and (max-width: 480px) {
   .headline__content {
     padding: 0px 15px 0 0;
+    margin-top: 32px;
   }
 }
 .headline__title {
