--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -19,7 +19,6 @@
   }
   @media screen and (max-width: $media-480) {
     margin: 0;
-    padding-top: 32px;
     height: 800px;
   }
 
@@ -37,6 +36,7 @@
     }
     @media screen and (max-width: $media-480) {
       padding: 0px 15px 0 0;
+      margin-top: 32px;
     }
   }
 
