--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -15,10 +15,10 @@
     padding-bottom: 58px;
   }
   @media screen and (max-width: $media-576) {
-    margin: 32px 15px 58px;
+    margin: 32px 0px 58px;
   }
   @media screen and (max-width: $media-480) {
-    margin: 0;
+    // margin: 0;
     height: 800px;
   }
 
@@ -36,7 +36,6 @@
     }
     @media screen and (max-width: $media-480) {
       padding: 0px 15px 0 0;
-      margin-top: 32px;
     }
   }
 
