--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,39 @@
 .header {
-  background-color: #f3c6bd;
-  margin: 40px 130px;
+  margin: 0;
+  background-color: #fff;
 }
-@media screen and (max-width: 992px) {
+@media screen and (min-width: 900px) {
   .header {
-    margin: 0;
+    margin: 40px 130px;
   }
-}
-.header .nav__list {
-  margin-top: -10px;
 }
 
 .header__inner {
-  width: 100%;
-  max-width: 1140px;
-  height: 62px;
   position: relative;
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  align-items: start;
+  width: 100%;
+  height: 62px;
+  padding: 8px 20px 8px 15px;
+  background-color: #fff;
   transition: padding 0.3s, background-color 0.3s;
+}
+@media screen and (max-width: 480px) {
+  .header__inner {
+    z-index: 1000;
+  }
+}
+@media screen and (min-width: 900px) {
+  .header__inner {
+    max-width: 1140px;
+    background-color: #f3c6bd;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .header__inner {
+    align-items: start;
+  }
 }
 .header__inner--sticky {
   position: fixed;
@@ -34,46 +48,58 @@
   animation-duration: 0.4s;
 }
 .header__inner .header__content {
-  display: flex;
-  align-items: center;
-  gap: 58px;
+  display: none;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 1440px) {
   .header__inner .header__content {
-    display: none;
+    display: flex;
+    align-items: center;
+    gap: 58px;
   }
 }
 
 .logo {
   display: flex;
   align-items: center;
-  gap: 9px;
+  position: relative;
+}
+@media screen and (min-width: 900px) {
+  .logo {
+    gap: 9px;
+  }
+}
+
+.logo__img {
+  width: 56px;
+  height: 52px;
 }
 
 .logo__img-header {
-  width: 72px;
-  height: 71px;
   margin-top: 7px;
+}
+@media screen and (min-width: 900px) {
+  .logo__img-header {
+    width: 72px;
+    height: 71px;
+  }
 }
 
 .header-logo {
-  height: 62px;
+  height: 47px;
+  gap: 10px;
   margin-left: -6px;
 }
-@media screen and (max-width: 992px) {
+@media screen and (min-width: 900px) {
   .header-logo {
-    height: 47px;
+    height: 62px;
   }
 }
 
-@media screen and (max-width: 480px) {
-  .header-logo {
-    gap: 10px;
+@media screen and (min-width: 900px) {
+  .logo__text {
+    display: flex;
+    flex-direction: column;
   }
-}
-.logo__text {
-  display: flex;
-  flex-direction: column;
 }
 .logo__text-name {
   color: #2b292d;
@@ -82,14 +108,14 @@
   line-height: 25px;
 }
 .logo__text-description {
-  font-size: 18px;
-  opacity: 0.6;
-  color: #2b292d;
-  line-height: 25px;
+  display: none;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 900px) {
   .logo__text-description {
-    display: none;
+    font-size: 18px;
+    opacity: 0.6;
+    color: #2b292d;
+    line-height: 25px;
   }
 }
 
@@ -97,11 +123,7 @@
   display: flex;
   align-items: center;
   gap: 50px;
-}
-@media screen and (max-width: 1200px) {
-  .nav__list {
-    display: none;
-  }
+  margin-top: -10px;
 }
 .nav__list-item {
   cursor: pointer;
@@ -190,36 +212,30 @@
 }
 
 .header__audio {
-  position: absolute;
-  top: 6px;
-  right: -85px;
+  display: none;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 1440px) {
   .header__audio {
-    display: none;
+    display: block;
+    position: absolute;
+    top: 6px;
+    right: -85px;
   }
 }
 
 .mobile-menu-icon {
-  display: none;
+  position: relative;
+  z-index: 1100;
+  height: 64px;
+  border-left: 1px solid rgba(0, 0, 0, 0.15);
+  opacity: 0.15px;
   font-size: 24px;
   cursor: pointer;
   color: rgba(43, 41, 45, 0.6);
 }
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 900px) {
   .mobile-menu-icon {
-    position: relative;
-    display: block;
-    z-index: 1100;
-  }
-}
-@media screen and (max-width: 992px) {
-  .mobile-menu-icon {
-    display: block;
-    height: 64px;
-    border-left: 1px solid rgba(0, 0, 0, 0.15);
-    opacity: 0.15px;
-    margin-top: -10px;
+    display: none;
   }
 }
 .mobile-menu-icon .fa-bars,
@@ -227,25 +243,25 @@
   font-size: clamp(22px, 1.1898rem + 0.9259vw, 32px);
   color: rgba(44, 50, 65, 0.6);
   margin-left: -2px;
+  padding: 20px 0 20px 20px;
 }
 
 .mobile-menu {
   display: none;
+  max-width: 100%;
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
   bottom: 0;
   padding: 150px 20px;
   background-color: #f3c6bd;
   box-shadow: 4px 6px 14px rgba(43, 41, 45, 0.3);
-  width: 100%;
-  max-width: 360px;
   z-index: 999;
 }
-@media screen and (max-width: 576px) {
+@media screen and (min-width: 400px) {
   .mobile-menu {
-    max-width: 100%;
-    right: 0;
+    max-width: 360px;
   }
 }
 
@@ -292,28 +308,6 @@
   color: #fff;
 }
 
-@media screen and (max-width: 1200px) {
-  .logo,
-  .mobile-menu-icon {
-    position: relative;
-    z-index: 1100;
-  }
-}
-@media screen and (max-width: 992px) {
-  .header__inner {
-    width: 100%;
-    background-color: #fff;
-    padding: 8px 20px 8px 15px;
-  }
-  .fa-bars,
-  .fa-times {
-    padding: 20px 0 20px 20px;
-  }
-  .logo__img {
-    width: 56px;
-    height: 52px;
-  }
-}
 .headline {
   position: relative;
   max-width: 1249px;
