--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,25 +1,52 @@
 .header {
-  background-color: $color-beige;
-  margin: 40px 130px;
+  margin: 0;
+  background-color: $color-light;
 
-  @media screen and (max-width: $media-992) {
-    margin: 0;
+  @media screen and (min-width: $media-900) {
+    margin: 40px 130px;
   }
 
-  .nav__list {
-    margin-top: -10px;
-  }
+  // background-color: $color-beige;
+  // margin: 40px 130px;
+
+  // @media screen and (max-width: $media-992) {
+  //   margin: 0;
+  // }
 }
 
 .header__inner {
-  width: 100%;
-  max-width: 1140px;
-  height: 62px;
   position: relative;
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  align-items: start;
+  width: 100%;
+  height: 62px;
+  padding: 8px 20px 8px 15px;
+
+
+  @media screen and (max-width: 480px) {
+    z-index: 1000;
+  }
+
+  background-color: #fff;
   transition: padding 0.3s, background-color 0.3s;
+
+  @media screen and (min-width: $media-900) {
+    max-width: 1140px;
+    background-color: $color-beige;
+  }
+  @media screen and (min-width: $media-1440) {
+    align-items: start;
+  }
+
+  // width: 100%;
+  // max-width: 1140px;
+  // height: 62px;
+  // position: relative;
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: start;
+  // transition: padding 0.3s, background-color 0.3s;
 
   &--sticky {
     position: fixed;
@@ -35,43 +62,86 @@
   }
 
   .header__content {
-    display: flex;
-    align-items: center;
-    gap: 58px;
+    display: none;
 
-    @media screen and (max-width: $media-1200) {
-      display: none;
+    @media screen and (min-width: $media-1440) {
+      display: flex;
+      align-items: center;
+      gap: 58px;
     }
+
+    // display: flex;
+    // align-items: center;
+    // gap: 58px;
+
+    // @media screen and (max-width: $media-1200) {
+    //   display: none;
+    // }
   }
 }
 
 .logo {
   display: flex;
   align-items: center;
-  gap: 9px;
+  position: relative;
+  // z-index: 1100;
+
+  @media screen and (min-width: $media-900) {
+    gap: 9px;
+  }
+
+  // display: flex;
+  // align-items: center;
+  // gap: 9px;
 }
+
+.logo__img {
+  width: 56px;
+  height: 52px;
+}
+
 .logo__img-header {
-  width: 72px;
-  height: 71px;
   margin-top: 7px;
+
+  @media screen and (min-width: $media-900) {
+    width: 72px;
+    height: 71px;
+  }
+
+  // width: 72px;
+  // height: 71px;
+  // margin-top: 7px;
 }
 .header-logo {
-  height: 62px;
+  height: 47px;
+  gap: 10px;
   margin-left: -6px;
-  @media screen and (max-width: $media-992) {
-    height: 47px;
+
+  @media screen and (min-width: $media-900) {
+    height: 62px;
   }
+
+  // height: 62px;
+  // margin-left: -6px;
+  // @media screen and (max-width: $media-992) {
+  //   height: 47px;
+  // }
 }
 
-@media screen and (max-width: $media-480) {
-  .header-logo {
-    gap: 10px;
-  }
-}
+// @media screen and (max-width: $media-480) {
+//   .header-logo {
+//     gap: 10px;
+//   }
+// }
 
 .logo__text {
-  display: flex;
-  flex-direction: column;
+  @media screen and (min-width: $media-900) {
+    display: flex;
+    flex-direction: column;
+  }
+
+  // display: flex;
+  // flex-direction: column;
 
   &-name {
     color: $color-black;
@@ -81,14 +151,23 @@
   }
 
   &-description {
-    font-size: 18px;
-    opacity: 0.6;
-    color: $color-black;
-    line-height: 25px;
+    display: none;
 
-    @media screen and (max-width: $media-1200) {
-      display: none;
+    @media screen and (min-width: $media-900) {
+      font-size: 18px;
+      opacity: 0.6;
+      color: $color-black;
+      line-height: 25px;
     }
+
+    // font-size: 18px;
+    // opacity: 0.6;
+    // color: $color-black;
+    // line-height: 25px;
+
+    // @media screen and (max-width: $media-1200) {
+    //   display: none;
+    // }
   }
 }
 
@@ -97,10 +176,7 @@
     display: flex;
     align-items: center;
     gap: 50px;
-
-    @media screen and (max-width: $media-1200) {
-      display: none;
-    }
+    margin-top: -10px;
 
     &-item {
       cursor: pointer;
@@ -205,60 +281,67 @@
 }
 
 .header__audio {
-  position: absolute;
-  top: 6px;
-  right: -85px;
+  display: none;
 
-  @media screen and (max-width: $media-1200) {
-    display: none;
+  @media screen and (min-width: $media-1440) {
+    display: block;
+    position: absolute;
+    top: 6px;
+    right: -85px;
   }
 }
 
 // Mobile Menu
 
 .mobile-menu-icon {
-  display: none;
+  position: relative;
+  z-index: 1100;
+
+  height: 64px;
+  border-left: 1px solid rgba($color-dark, 0.15);
+  opacity: 0.15px;
+  // margin-top: -10px;
+
   font-size: 24px;
   cursor: pointer;
   color: rgba($color-black, 0.6);
 
-  @media screen and (max-width: $media-1200) {
-    position: relative;
-    display: block;
-    z-index: 1100;
+  @media screen and (min-width: $media-900) {
+    display: none;
   }
-  @media screen and (max-width: $media-992) {
-    display: block;
-    height: 64px;
-    border-left: 1px solid rgba($color-dark, 0.15);
-    opacity: 0.15px;
-    margin-top: -10px;
-  }
+
+  // @media screen and (max-width: $media-992) {
+  //   display: block;
+  //   height: 64px;
+  //   border-left: 1px solid rgba($color-dark, 0.15);
+  //   opacity: 0.15px;
+  //   margin-top: -10px;
+  // }
 
   .fa-bars,
   .fa-times {
     font-size: clamp(22px, 1.1898rem + 0.9259vw, 32px);
     color: rgba($color-grey, 0.6);
     margin-left: -2px;
+    padding: 20px 0 20px 20px;
   }
 }
 
 .mobile-menu {
   display: none;
+  max-width: 100%;
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
   bottom: 0;
   padding: 150px 20px;
   background-color: $color-beige;
   box-shadow: 4px 6px 14px rgba($color-black, 0.3);
-  width: 100%;
-  max-width: 360px;
   z-index: 999;
 
-  @media screen and (max-width: $media-576) {
-    max-width: 100%;
-    right: 0;
+  @media screen and (min-width: $media-400) {
+    max-width: 360px;
   }
 }
 
@@ -300,26 +383,26 @@
   }
 }
 
-@media screen and (max-width: $media-1200) {
-  .logo,
-  .mobile-menu-icon {
-    position: relative;
-    z-index: 1100;
-  }
-}
+// @media screen and (max-width: $media-1200) {
+//   .logo,
+//   .mobile-menu-icon {
+//     position: relative;
+//     z-index: 1100;
+//   }
+// }
 
 @media screen and (max-width: $media-992) {
   .header__inner {
-    width: 100%;
-    background-color: $color-light;
-    padding: 8px 20px 8px 15px;
+    // width: 100%;
+    // background-color: $color-light;
+    // padding: 8px 20px 8px 15px;
   }
   .fa-bars,
   .fa-times {
-    padding: 20px 0 20px 20px;
+    // padding: 20px 0 20px 20px;
   }
-  .logo__img {
-    width: 56px;
-    height: 52px;
-  }
+  // .logo__img {
+  //   width: 56px;
+  //   height: 52px;
+  // }
 }
