--- a/styles/header.scss
+++ b/styles/header.scss
@@ -99,15 +99,20 @@
 .logo__img {
   width: 56px;
   height: 52px;
+
+   @media screen and (min-width: $media-900) {
+    width: 60px;
+    height: 60px;
+  }
 }
 
 .logo__img-header {
   margin-top: 7px;
 
-  @media screen and (min-width: $media-900) {
-    width: 72px;
-    height: 71px;
-  }
+  // @media screen and (min-width: $media-900) {
+  //   width: 72px;
+  //   height: 71px;
+  // }
 
   // width: 72px;
   // height: 71px;
@@ -155,6 +160,7 @@
     display: none;
 
     @media screen and (min-width: $media-900) {
+      display: block;
       font-size: 18px;
       opacity: 0.6;
       color: $color-black;
