--- a/styles.css
+++ b/styles.css
@@ -75,15 +75,15 @@
   width: 56px;
   height: 52px;
 }
-@media screen and (min-width: 900px) {
-  .logo__img {
-    width: 72px;
-    height: 71px;
-  }
-}
 
 .logo__img-header {
   margin-top: 7px;
+}
+@media screen and (min-width: 900px) {
+  .logo__img-header {
+    width: 72px;
+    height: 71px;
+  }
 }
 
 .header-logo {
