--- a/styles/breakpoints.scss
+++ b/styles/breakpoints.scss
@@ -2,8 +2,6 @@ $media-1440: 1440px;
 $media-900: 900px;
 $media-400: 400px;
 
-
-
 $media-1320: 1320px;
 $media-1200: 1200px;
 $media-992: 992px;
@@ -11,4 +9,11 @@ $media-855: 885px;
 $media-768: 768px;
 $media-576: 576px;
 $media-480: 480px;
+
+$media-320: 320px;
+$media-320: 320px;
+$media-320: 320px;
+$media-320: 320px;
+$media-320: 320px;
+$media-320: 320px;
 $media-320: 320px;
