--- a/styles/header.scss
+++ b/styles/header.scss
@@ -34,7 +34,7 @@
     max-width: 1140px;
     background-color: $color-beige;
   }
-  @media screen and (min-width: $media-1440) {
+  @media screen and (min-width: $media-1400) {
     align-items: start;
     padding: 0;
   }
@@ -64,7 +64,7 @@
   .header__content {
     display: none;
 
-    @media screen and (min-width: $media-1440) {
+    @media screen and (min-width: $media-1400) {
       display: flex;
       align-items: center;
       gap: 58px;
@@ -288,7 +288,7 @@
 .header__audio {
   display: none;
 
-  @media screen and (min-width: $media-1440) {
+  @media screen and (min-width: $media-1400) {
     display: block;
     position: absolute;
     top: 6px;
@@ -312,6 +312,10 @@
   color: rgba($color-black, 0.6);
 
   @media screen and (min-width: $media-900) {
+    // display: none;
+    border-left: none;
+  }
+  @media screen and (min-width: $media-1400) {
     display: none;
   }
 
