--- a/styles.css
+++ b/styles.css
@@ -95,23 +95,24 @@
     height: 62px;
   }
 }
+
 @media screen and (min-width: 900px) {
-  .header-logo .logo__text {
+  .logo__text {
     display: flex;
     flex-direction: column;
   }
 }
-.header-logo .logo__text-name {
+.logo__text-name {
   color: #2b292d;
   font-weight: 700;
   font-size: 20px;
   line-height: 25px;
 }
-.header-logo .logo__text-description {
+.logo__text-description {
   display: none;
 }
 @media screen and (min-width: 900px) {
-  .header-logo .logo__text-description {
+  .logo__text-description {
     display: block;
     font-size: 18px;
     opacity: 0.6;
@@ -119,41 +120,44 @@
     line-height: 25px;
   }
 }
-.header-logo .nav__list {
+
+.nav__list {
   display: flex;
   align-items: center;
   gap: 50px;
   margin-top: -10px;
 }
-.header-logo .nav__list-item {
+.nav__list-item {
   cursor: pointer;
 }
-.header-logo .nav__list-item:nth-of-type(3) {
+.nav__list-item:nth-of-type(3) {
   animation: pulse-wave 1.5s infinite;
 }
-.header-logo .nav__list .nav__list-link--test {
+.nav__list .nav__list-link--test {
   letter-spacing: -0.01px;
 }
-.header-logo .nav__list-link {
+.nav__list-link {
   color: #2b292d;
   border-bottom-width: 2px;
   transition: border-bottom 0.2s linear;
 }
-.header-logo .nav__list-link:hover {
+.nav__list-link:hover {
   border-bottom: 3px solid #3040c4;
   border-bottom-width: 4px;
   color: #3040c4;
 }
-.header-logo .nav__list-link--active {
+.nav__list-link--active {
   font-weight: 700;
 }
-.header-logo .nav__list .fa-solid {
+.nav__list .fa-solid {
   font-size: 10px;
 }
-.header-logo .nav__list-item {
+
+.nav__list-item {
   position: relative;
 }
-.header-logo .dropdown {
+
+.dropdown {
   display: none;
   background-color: #fff;
   position: absolute;
@@ -165,25 +169,26 @@
   transition: box-shadow 0.2s ease-in-out;
   z-index: 1000;
 }
-.header-logo .dropdown:hover {
+.dropdown:hover {
   box-shadow: 0 0 10px 6px rgba(243, 198, 189, 0.8);
 }
-.header-logo .dropdown__list {
+.dropdown__list {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(4, 1fr);
   gap: 20px;
   padding: 20px 40px;
 }
-.header-logo .dropdown__list-title {
+.dropdown__list-title {
   font-weight: 700;
 }
-.header-logo .dropdown__list-title--active {
+.dropdown__list-title--active {
   color: #009b4d;
 }
-.header-logo .dropdown__list-description {
+.dropdown__list-description {
   font-size: 18px;
 }
+
 @keyframes pulse-wave {
   0% {
     box-shadow: 0 0 0 0 rgba(252, 240, 227, 0.5), 0 0 0 10px rgba(243, 198, 189, 0.4), 0 0 0 20px rgba(252, 240, 227, 0.3), 0 0 0 30px rgba(243, 198, 189, 0.2);
@@ -202,23 +207,25 @@
     top: 0;
   }
 }
-.header-logo .play-btn {
+.play-btn {
   cursor: pointer;
   color: #fcf0e3;
   font-size: 26px;
 }
-.header-logo .header__audio {
+
+.header__audio {
   display: none;
 }
 @media screen and (min-width: 1400px) {
-  .header-logo .header__audio {
+  .header__audio {
     display: block;
     position: absolute;
     top: 6px;
     right: -85px;
   }
 }
-.header-logo .mobile-menu-icon {
+
+.mobile-menu-icon {
   position: relative;
   z-index: 1100;
   height: 64px;
@@ -228,24 +235,15 @@
   cursor: pointer;
   color: rgba(43, 41, 45, 0.6);
 }
-@media screen and (min-width: 900px) {
-  .header-logo .mobile-menu-icon {
-    border-left: none;
-  }
-}
-@media screen and (min-width: 1400px) {
-  .header-logo .mobile-menu-icon {
-    display: none;
-  }
-}
-.header-logo .mobile-menu-icon .fa-bars,
-.header-logo .mobile-menu-icon .fa-times {
+.mobile-menu-icon .fa-bars,
+.mobile-menu-icon .fa-times {
   font-size: clamp(22px, 1.1898rem + 0.9259vw, 32px);
   color: rgba(44, 50, 65, 0.6);
   margin-left: -2px;
   padding: 20px 0 20px 20px;
 }
-.header-logo .mobile-menu {
+
+.mobile-menu {
   display: none;
   max-width: 100%;
   position: absolute;
@@ -259,37 +257,41 @@
   z-index: 999;
 }
 @media screen and (min-width: 400px) {
-  .header-logo .mobile-menu {
+  .mobile-menu {
     max-width: 360px;
   }
 }
-.header-logo .mobile-nav {
+
+.mobile-nav {
   display: flex;
   flex-direction: column;
   gap: 40px;
 }
-.header-logo .mobile-nav__list {
+
+.mobile-nav__list {
   display: flex;
   flex-direction: column;
   gap: 16px;
   align-items: center;
 }
-.header-logo .mobile-nav__list-link {
+
+.mobile-nav__list-link {
   color: rgba(43, 41, 45, 0.6);
   text-transform: uppercase;
   font-weight: 700;
   text-decoration: none;
   font-size: 28px;
 }
-.header-logo .mobile-nav__list-link:hover {
+.mobile-nav__list-link:hover {
   transition: border-bottom 0.2s linear;
 }
-.header-logo .mobile-nav__list-link:hover:hover {
+.mobile-nav__list-link:hover:hover {
   border-bottom: 3px solid #3040c4;
   border-bottom-width: 4px;
   color: #3040c4;
 }
-.header-logo .mobile-menu-btn {
+
+.mobile-menu-btn {
   font-size: 22px;
   font-weight: 700;
   padding: 10px 28px;
@@ -298,7 +300,7 @@
   background-color: #fff;
   transition: color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
-.header-logo .mobile-menu-btn:hover {
+.mobile-menu-btn:hover {
   background-color: #3040c4;
   color: #fff;
 }
