--- a/styles/header.scss
+++ b/styles/header.scss
@@ -5,6 +5,13 @@
   @media screen and (min-width: $media-900) {
     margin: 40px 130px;
   }
+
+  // background-color: $color-beige;
+  // margin: 40px 130px;
+
+  // @media screen and (max-width: $media-992) {
+  //   margin: 0;
+  // }
 }
 
 .header__inner {
@@ -32,6 +39,15 @@
     padding: 0;
   }
 
+  // width: 100%;
+  // max-width: 1140px;
+  // height: 62px;
+  // position: relative;
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: start;
+  // transition: padding 0.3s, background-color 0.3s;
+
   &--sticky {
     position: fixed;
     top: 0;
@@ -53,6 +69,14 @@
       align-items: center;
       gap: 58px;
     }
+
+    // display: flex;
+    // align-items: center;
+    // gap: 58px;
+
+    // @media screen and (max-width: $media-1200) {
+    //   display: none;
+    // }
   }
 }
 
@@ -65,6 +89,10 @@
   @media screen and (min-width: $media-900) {
     gap: 9px;
   }
+
+  // display: flex;
+  // align-items: center;
+  // gap: 9px;
 }
 
 .logo__img {
@@ -79,6 +107,15 @@
     width: 72px;
     height: 71px;
   }
+
+  // @media screen and (min-width: $media-900) {
+  //   width: 72px;
+  //   height: 71px;
+  // }
+
+  // width: 72px;
+  // height: 71px;
+  // margin-top: 7px;
 }
 .header-logo {
   height: 47px;
@@ -88,233 +125,289 @@
     height: 62px;
   }
 
-  .logo__text {
-    @media screen and (min-width: $media-900) {
-      display: flex;
-      flex-direction: column;
-    }
+  // height: 62px;
+  // margin-left: -6px;
+  // @media screen and (max-width: $media-992) {
+  //   height: 47px;
+  // }
+}
 
-    &-name {
+// @media screen and (max-width: $media-480) {
+//   .header-logo {
+//     gap: 10px;
+//   }
+// }
+
+.logo__text {
+  @media screen and (min-width: $media-900) {
+    display: flex;
+    flex-direction: column;
+  }
+
+  // display: flex;
+  // flex-direction: column;
+
+  &-name {
+    color: $color-black;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 25px;
+  }
+
+  &-description {
+    display: none;
+
+    @media screen and (min-width: $media-900) {
+      display: block;
+      font-size: 18px;
+      opacity: 0.6;
       color: $color-black;
-      font-weight: 700;
-      font-size: 20px;
       line-height: 25px;
     }
 
-    &-description {
-      display: none;
+    // font-size: 18px;
+    // opacity: 0.6;
+    // color: $color-black;
+    // line-height: 25px;
 
-      @media screen and (min-width: $media-900) {
-        display: block;
-        font-size: 18px;
-        opacity: 0.6;
-        color: $color-black;
-        line-height: 25px;
-      }
-    }
+    // @media screen and (max-width: $media-1200) {
+    //   display: none;
+    // }
   }
+}
 
-  .nav {
-    &__list {
-      display: flex;
-      align-items: center;
-      gap: 50px;
-      margin-top: -10px;
-
-      &-item {
-        cursor: pointer;
-      }
-
-      &-item:nth-of-type(3) {
-        animation: pulse-wave 1.5s infinite;
-      }
-
-      .nav__list-link--test {
-        letter-spacing: -0.01px;
-      }
-
-      &-link {
-        color: $color-black;
-        border-bottom-width: 2px;
-        @include hover-link;
-
-        &--active {
-          font-weight: 700;
-        }
-      }
-
-      .fa-solid {
-        font-size: 10px;
-      }
-    }
-  }
-
-  // Dropdown
-
-  .nav__list-item {
-    position: relative;
-  }
-
-  .dropdown {
-    display: none;
-    background-color: $color-light;
-    position: absolute;
-    top: 50px;
-    right: 20px;
-    border-radius: 6px;
-    width: 612px;
-    height: 292px;
-    transition: box-shadow 0.2s ease-in-out;
-    z-index: 1000;
-    &:hover {
-      box-shadow: 0 0 10px 6px rgba($color-beige, 0.8);
-    }
-
-    &__list {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(4, 1fr);
-      gap: 20px;
-      padding: 20px 40px;
-    }
-
-    &__list-title {
-      font-weight: 700;
-      &--active {
-        color: $color-green;
-      }
-    }
-
-    &__list-description {
-      font-size: 18px;
-    }
-  }
-
-  // Pulse Wave
-
-  @keyframes pulse-wave {
-    0% {
-      box-shadow: 0 0 0 0 rgba($color-yellow-light, 0.5), 0 0 0 10px rgba($color-beige, 0.4),
-        0 0 0 20px rgba($color-yellow-light, 0.3), 0 0 0 30px rgba($color-beige, 0.2);
-    }
-    100% {
-      box-shadow: 0 0 0 20px rgba($color-yellow-light, 0), 0 0 0 30px rgba($color-beige, 0),
-        0 0 0 40px rgba($color-yellow-light, 0), 0 0 0 50px rgba($color-beige, 0);
-    }
-  }
-
-  // smooth header
-
-  @keyframes header {
-    0% {
-      opacity: 0;
-      top: -100px;
-    }
-
-    100% {
-      opacity: 1;
-      top: 0;
-    }
-  }
-
-  .play-btn {
-    cursor: pointer;
-    color: $color-yellow-light;
-    font-size: 26px;
-  }
-
-  .header__audio {
-    display: none;
-
-    @media screen and (min-width: $media-1400) {
-      display: block;
-      position: absolute;
-      top: 6px;
-      right: -85px;
-    }
-  }
-
-  // Mobile Menu
-
-  .mobile-menu-icon {
-    position: relative;
-    z-index: 1100;
-    height: 64px;
-    border-left: 1px solid rgba($color-dark, 0.15);
-    opacity: 0.15px;
-    font-size: 24px;
-    cursor: pointer;
-    color: rgba($color-black, 0.6);
-
-    @media screen and (min-width: $media-900) {
-      border-left: none;
-    }
-    @media screen and (min-width: $media-1400) {
-      display: none;
-    }
-
-    .fa-bars,
-    .fa-times {
-      font-size: clamp(22px, 1.1898rem + 0.9259vw, 32px);
-      color: rgba($color-grey, 0.6);
-      margin-left: -2px;
-      padding: 20px 0 20px 20px;
-    }
-  }
-
-  .mobile-menu {
-    display: none;
-    max-width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    padding: 150px 20px;
-    background-color: $color-beige;
-    box-shadow: 4px 6px 14px rgba($color-black, 0.3);
-    z-index: 999;
-
-    @media screen and (min-width: $media-400) {
-      max-width: 360px;
-    }
-  }
-
-  .mobile-nav {
-    @include flex-column(40px);
-  }
-
-  .mobile-nav__list {
+.nav {
+  &__list {
     display: flex;
-    flex-direction: column;
-    gap: 16px;
     align-items: center;
-  }
+    gap: 50px;
+    margin-top: -10px;
 
-  .mobile-nav__list-link {
-    color: rgb($color-black, 0.6);
-    text-transform: uppercase;
-    font-weight: 700;
-    text-decoration: none;
-    font-size: 28px;
+    &-item {
+      cursor: pointer;
+    }
 
-    &:hover {
+    &-item:nth-of-type(3) {
+      animation: pulse-wave 1.5s infinite;
+    }
+
+    .nav__list-link--test {
+      letter-spacing: -0.01px;
+    }
+
+    &-link {
+      color: $color-black;
+      border-bottom-width: 2px;
       @include hover-link;
+
+      &--active {
+        font-weight: 700;
+      }
+    }
+
+    .fa-solid {
+      font-size: 10px;
     }
   }
+}
 
-  .mobile-menu-btn {
-    font-size: 22px;
+// Dropdown
+
+.nav__list-item {
+  position: relative;
+}
+
+.dropdown {
+  display: none;
+  background-color: $color-light;
+  position: absolute;
+  top: 50px;
+  right: 20px;
+  border-radius: 6px;
+  width: 612px;
+  height: 292px;
+  transition: box-shadow 0.2s ease-in-out;
+  z-index: 1000;
+  &:hover {
+    box-shadow: 0 0 10px 6px rgba($color-beige, 0.8);
+  }
+
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 20px;
+    padding: 20px 40px;
+  }
+
+  &__list-title {
     font-weight: 700;
-    padding: 10px 28px;
-    border-radius: 2px;
-    color: $color-blue;
-    background-color: $color-light;
-    transition: color 0.2s ease-in-out, color 0.2s ease-in-out;
-
-    &:hover {
-      background-color: $color-accent;
-      color: $color-light;
+    &--active {
+      color: $color-green;
     }
   }
+
+  &__list-description {
+    font-size: 18px;
+  }
+}
+
+// Pulse Wave
+
+@keyframes pulse-wave {
+  0% {
+    box-shadow: 0 0 0 0 rgba($color-yellow-light, 0.5), 0 0 0 10px rgba($color-beige, 0.4),
+      0 0 0 20px rgba($color-yellow-light, 0.3), 0 0 0 30px rgba($color-beige, 0.2);
+  }
+  100% {
+    box-shadow: 0 0 0 20px rgba($color-yellow-light, 0), 0 0 0 30px rgba($color-beige, 0),
+      0 0 0 40px rgba($color-yellow-light, 0), 0 0 0 50px rgba($color-beige, 0);
+  }
+}
+
+// smooth header
+
+@keyframes header {
+  0% {
+    opacity: 0;
+    top: -100px;
+  }
+
+  100% {
+    opacity: 1;
+    top: 0;
+  }
+}
+
+.play-btn {
+  cursor: pointer;
+  color: $color-yellow-light;
+  font-size: 26px;
+}
+
+.header__audio {
+  display: none;
+
+  @media screen and (min-width: $media-1400) {
+    display: block;
+    position: absolute;
+    top: 6px;
+    right: -85px;
+  }
+}
+
+// Mobile Menu
+
+.mobile-menu-icon {
+  position: relative;
+  z-index: 1100;
+
+  height: 64px;
+  border-left: 1px solid rgba($color-dark, 0.15);
+  opacity: 0.15px;
+  // margin-top: -10px;
+
+  font-size: 24px;
+  cursor: pointer;
+  color: rgba($color-black, 0.6);
+
+  @media screen and (min-width: $media-900) {
+    // display: none;
+  }
+
+  // @media screen and (max-width: $media-992) {
+  //   display: block;
+  //   height: 64px;
+  //   border-left: 1px solid rgba($color-dark, 0.15);
+  //   opacity: 0.15px;
+  //   margin-top: -10px;
+  // }
+
+  .fa-bars,
+  .fa-times {
+    font-size: clamp(22px, 1.1898rem + 0.9259vw, 32px);
+    color: rgba($color-grey, 0.6);
+    margin-left: -2px;
+    padding: 20px 0 20px 20px;
+  }
+}
+
+.mobile-menu {
+  display: none;
+  max-width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 150px 20px;
+  background-color: $color-beige;
+  box-shadow: 4px 6px 14px rgba($color-black, 0.3);
+  z-index: 999;
+
+  @media screen and (min-width: $media-400) {
+    max-width: 360px;
+  }
+}
+
+.mobile-nav {
+  @include flex-column(40px);
+}
+
+.mobile-nav__list {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
+}
+
+.mobile-nav__list-link {
+  color: rgb($color-black, 0.6);
+  text-transform: uppercase;
+  font-weight: 700;
+  text-decoration: none;
+  font-size: 28px;
+
+  &:hover {
+    @include hover-link;
+  }
+}
+
+.mobile-menu-btn {
+  font-size: 22px;
+  font-weight: 700;
+  padding: 10px 28px;
+  border-radius: 2px;
+  color: $color-blue;
+  background-color: $color-light;
+  transition: color 0.2s ease-in-out, color 0.2s ease-in-out;
+
+  &:hover {
+    background-color: $color-accent;
+    color: $color-light;
+  }
+}
+
+// @media screen and (max-width: $media-1200) {
+//   .logo,
+//   .mobile-menu-icon {
+//     position: relative;
+//     z-index: 1100;
+//   }
+// }
+
+@media screen and (max-width: $media-992) {
+  .header__inner {
+    // width: 100%;
+    // background-color: $color-light;
+    // padding: 8px 20px 8px 15px;
+  }
+  .fa-bars,
+  .fa-times {
+    // padding: 20px 0 20px 20px;
+  }
+  // .logo__img {
+  //   width: 56px;
+  //   height: 52px;
+  // }
 }
