--- a/styles.css
+++ b/styles.css
@@ -361,25 +361,26 @@
   font-size: clamp(50px, 2.5694rem + 2.7778vw, 80px);
   font-weight: 700;
   line-height: 1;
-  letter-spacing: -1px;
-  margin-bottom: 14px;
+  margin-bottom: 8px;
+  letter-spacing: -0.3125px;
+  margin: 0;
 }
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 400px) {
   .headline__title {
-    margin-bottom: 8px;
-    letter-spacing: -0.3125px;
-    margin: 0;
+    margin-bottom: 14px;
+    letter-spacing: -1px;
   }
 }
 .headline__description {
   max-width: 456px;
   font-size: 24px;
   line-height: 142%;
+  margin: 29px 0 32px;
   margin-bottom: 60px;
 }
-@media screen and (max-width: 885px) {
+@media screen and (min-width: 900px) {
   .headline__description {
-    margin: 29px 0 32px;
+    margin-bottom: 60px;
   }
 }
 .headline__buttons {
