--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -128,24 +128,48 @@
   &__buttons {
     display: flex;
     align-items: center;
-    gap: 10px;
+    flex-direction: column;
+    gap: 15px;
 
-    @media screen and (max-width: $media-576) {
-      flex-direction: column;
-
-      .button-blue,
-      .button-white {
-        width: 100%;
-      }
+    @media screen and (min-width: $media-400) {
+      flex-direction: row;
+      gap: 10px;
     }
 
-    @media screen and (max-width: $media-480) {
-      gap: 15px;
+    .button-blue,
+    .button-white {
+      width: 100%;
+
+      @media screen and (min-width: $media-900) {
+        width: auto;
+      }
     }
 
     .button-white--accent {
       color: $color-accent;
     }
+
+    // ======================================
+    // display: flex;
+    // align-items: center;
+    // gap: 10px;
+
+    // @media screen and (max-width: $media-576) {
+    //   flex-direction: column;
+
+    //   .button-blue,
+    //   .button-white {
+    //     width: 100%;
+    //   }
+    // }
+
+    // @media screen and (max-width: $media-480) {
+    //   gap: 15px;
+    // }
+
+    // .button-white--accent {
+    //   color: $color-accent;
+    // }
   }
 
   &__img {
