--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,12 @@
 }
 @media screen and (min-width: 900px) {
   .header {
+    margin: 40px 20px;
+    background-color: #f3c6bd;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .header {
     margin: 40px 130px;
   }
 }
@@ -26,12 +32,12 @@
 }
 @media screen and (min-width: 900px) {
   .header__inner {
-    max-width: 1140px;
     background-color: #f3c6bd;
   }
 }
 @media screen and (min-width: 1400px) {
   .header__inner {
+    max-width: 1140px;
     align-items: start;
     padding: 0;
   }
@@ -60,10 +66,10 @@
 }
 
 .logo {
+  position: relative;
   display: flex;
   align-items: center;
   gap: 10px;
-  position: relative;
 }
 @media screen and (min-width: 900px) {
   .logo {
@@ -103,10 +109,10 @@
   }
 }
 .logo__text-name {
-  color: #2b292d;
   font-weight: 700;
   font-size: 20px;
   line-height: 25px;
+  color: #2b292d;
 }
 .logo__text-description {
   display: none;
@@ -116,8 +122,8 @@
     display: block;
     font-size: 18px;
     opacity: 0.6;
-    color: #2b292d;
     line-height: 25px;
+    color: #2b292d;
   }
 }
 
@@ -137,9 +143,9 @@
   letter-spacing: -0.01px;
 }
 .nav__list-link {
-  color: #2b292d;
-  border-bottom-width: 2px;
   transition: border-bottom 0.2s linear;
+  border-bottom-width: 2px;
+  color: #2b292d;
 }
 .nav__list-link:hover {
   border-bottom: 3px solid #3040c4;
@@ -159,7 +165,6 @@
 
 .dropdown {
   display: none;
-  background-color: #fff;
   position: absolute;
   top: 50px;
   right: 20px;
@@ -167,6 +172,7 @@
   width: 612px;
   height: 292px;
   transition: box-shadow 0.2s ease-in-out;
+  background-color: #fff;
   z-index: 1000;
 }
 .dropdown:hover {
@@ -209,8 +215,8 @@
 }
 .play-btn {
   cursor: pointer;
-  color: #fcf0e3;
   font-size: 26px;
+  color: #fcf0e3;
 }
 
 .header__audio {
@@ -232,8 +238,8 @@
   opacity: 0.15px;
   border-left: 1px solid rgba(0, 0, 0, 0.15);
   cursor: pointer;
-  z-index: 1100;
   color: rgba(43, 41, 45, 0.6);
+  z-index: 1100;
 }
 @media screen and (min-width: 900px) {
   .mobile-menu-icon {
