--- a/styles.css
+++ b/styles.css
@@ -24,11 +24,7 @@
   padding: 8px 20px 8px 15px;
   background-color: #fff;
   transition: padding 0.3s, background-color 0.3s;
-}
-@media screen and (max-width: 480px) {
-  .header__inner {
-    z-index: 1000;
-  }
+  z-index: 400;
 }
 @media screen and (min-width: 900px) {
   .header__inner {
@@ -166,8 +162,9 @@
 .dropdown {
   display: none;
   position: absolute;
-  top: 50px;
-  right: 20px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border-radius: 6px;
   width: 612px;
   height: 292px;
