--- a/styles/about.scss
+++ b/styles/about.scss
@@ -1,16 +1,14 @@
 .about {
-  &__inner {
-    display: grid;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 4px;
+  padding: 48px 15px 18px;
+  background-color: $color-light-dark;
+
+  @media screen and (min-width: $media-900) {
     grid-template-columns: repeat(2, 1fr);
     gap: 30px;
     padding: 76px 130px 50px;
-    background-color: $color-light-dark;
-
-		@media screen and (max-width: $media-768) {
-			grid-template-columns: 1fr;
-			padding: 48px 15px 18px;
-			gap: 4px;
-		}
   }
 
   &__content {
