--- a/styles/header.scss
+++ b/styles/header.scss
@@ -19,7 +19,7 @@
   width: 100%;
   height: 62px;
   padding: 8px 20px 8px 15px;
-  background-color: #fff;
+  background-color: $color-light;
   transition: padding 0.3s, background-color 0.3s;
   z-index: 400;
 
