--- a/styles/engage.scss
+++ b/styles/engage.scss
@@ -34,7 +34,7 @@
     @include title;
     font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
     max-width: 462px;
-    margin-bottom: 22px;
+    // margin-bottom: 22px;
     margin: 0 auto;
   }
 
