--- a/styles.css
+++ b/styles.css
@@ -749,29 +749,31 @@
 .manage {
   display: flex;
   align-items: center;
-  justify-content: baseline;
-  gap: 160px;
+  flex-direction: column;
+  justify-content: center;
+  gap: 58px;
+  text-align: left;
+  padding: 50px 24px 34px;
   background-color: #fcf0e3;
-  padding: 142px 24px 102px 192px;
 }
-@media screen and (max-width: 1400px) {
+@media screen and (min-width: 400px) {
   .manage {
-    justify-content: center;
-    padding: 142px 24px 102px;
-  }
-}
-@media screen and (max-width: 1200px) {
-  .manage {
-    flex-direction: column;
-    text-align: center;
-    gap: 58px;
     padding: 20px 24px 102px;
   }
 }
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 900px) {
   .manage {
-    text-align: left;
-    padding: 50px 24px 34px;
+    display: flex;
+    align-items: center;
+    justify-content: baseline;
+    gap: 160px;
+    text-align: center;
+    padding: 142px 24px 102px;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .manage {
+    padding: 142px 24px 102px 192px;
   }
 }
 .manage__wheel-image {
